--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@sapphire/docusaurus-plugin-npm2yarn2pnpm": "^1.1.4",
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.3.1",
