--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "2.3.1",
-    "@docusaurus/plugin-ideal-image": "^2.3.1",
-    "@docusaurus/preset-classic": "2.3.1",
-    "@docusaurus/remark-plugin-npm2yarn": "^2.3.1",
-    "@docusaurus/theme-live-codeblock": "^2.3.1",
-    "@docusaurus/theme-search-algolia": "^2.3.1",
+    "@docusaurus/core": "^2.4.0",
+    "@docusaurus/plugin-ideal-image": "^2.4.0",
+    "@docusaurus/preset-classic": "^2.4.0",
+    "@docusaurus/remark-plugin-npm2yarn": "^2.4.0",
+    "@docusaurus/theme-live-codeblock": "^2.4.0",
+    "@docusaurus/theme-search-algolia": "^2.4.0",
     "@mdx-js/react": "^1.6.21",
     "@sapphire/docusaurus-plugin-npm2yarn2pnpm": "^1.1.4",
     "clsx": "^1.2.1",
@@ -29,7 +29,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.3.1",
+    "@docusaurus/module-type-aliases": "^2.4.0",
     "@tsconfig/docusaurus": "^1.0.7",
     "docusaurus-plugin-module-alias": "^0.0.2",
     "typescript": "^4.9.5"
