修改 github actions配置

--- a/.github/workflows/docsearch-scraper.yml
+++ b/.github/workflows/docsearch-scraper.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Sleep for 2 minutes
-        run: sleep 120s
+      - name: Sleep for 10 seconds
+        run: sleep 10s
         shell: bash
 
       - name: Checkout repo
