添加 部署配置内容

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -6,7 +6,7 @@
 
 didilinkin:
   name: 哈希肯
-  title: Developer
+  title: Full-Stack Development
   url: https://github.com/didilinkin
   # image_url: https://github.com/didilinkin.png
   image_url: /img/avataaars.png
