--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@docusaurus/module-type-aliases": "^2.4.0",
     "@tsconfig/docusaurus": "^1.0.7",
     "docusaurus-plugin-module-alias": "^0.0.2",
+    "nodemailer": "^6.9.1",
     "typescript": "^4.9.5"
   },
   "browserslist": {
