--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,9 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |
-            sudo rm -rf /root/www/prod/home_page/html/*
+            cd ${{ secrets.SERVER_BLOG_PATH }}
+            docker-compose stop
+            sudo rm -rf ${{ secrets.SERVER_BLOG_PATH }}/*
 
       - name: 进行部署 🚀
         # 因为构建之后，需要把代码上传到服务器上，所以需要连接到ssh，并且做一个拷贝操作
@@ -50,16 +52,17 @@ jobs:
           pass: ${{ secrets.SERVER_PASSWORD }}
           connect_timeout: 10s
           local: './build/*'
-          remote: '/root/www/prod/home_page/html'
+          remote: ${{ secrets.SERVER_BLOG_PATH }}
 
-      - name: 让 Nginx重启, 部署完成 🎊
+      - name: 启动 Docker, 部署完成 🎊
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_ADDRESS }}
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |
-            sudo service nginx restart
+            cd ${{ secrets.SERVER_BLOG_PATH }}
+            bash run-docker.sh
 
       - name: 发送邮件 通知完成 📧
         env:
