--- a/blog/2023/5/16/data/traefik.yml
+++ b/blog/2023/5/16/data/traefik.yml
@@ -28,16 +28,16 @@ entryPoints:
   # Traefik 支持多种格式的 METRICS
   # 例如 Prometheus、Datadog、StatsD 等
   # 用户可以根据需要选择适合自己的格式和工具，并进行相应的配置和启用
-  metrics:
-    address: :8082
+#   metrics:
+#     address: :8082
 
-metrics:
-  prometheus:
-    addEntryPointsLabels: true
-    addrouterslabels: true
-    addServicesLabels: true
-    entryPoint: metrics
-    manualrouting: true
+# metrics:
+#   prometheus:
+#     addEntryPointsLabels: true
+#     addrouterslabels: true
+#     addServicesLabels: true
+#     entryPoint: metrics
+#     manualrouting: true
 
 
 
@@ -51,27 +51,27 @@ metrics:
 # --log.filePath=/path/to/traefik.log #可以创建数据卷把这个路径给挂载出去
 # --log.level=DEBUG # DEBUG, PANIC, FATAL, ERROR, WARN, INFO
 
-global:
-  checkNewVersion: true
-  sendAnonymousUsage: true
+# global:
+#   checkNewVersion: true
+#   sendAnonymousUsage: true
 
-accessLog:
-  filePath: /logs/traefik_access.log
-  format: json
-  fields:
-    defaultmode: keep
-    names:
-      ClientUsername: drop
-    headers:
-      defaultmode: keep
-      names:
-        User-Agent: redact
-        Authorization: drop
-        Content-Type: keep
+# accessLog:
+#   filePath: /logs/traefik_access.log
+#   format: json
+#   fields:
+#     defaultmode: keep
+#     names:
+#       ClientUsername: drop
+#     headers:
+#       defaultmode: keep
+#       names:
+#         User-Agent: redact
+#         Authorization: drop
+#         Content-Type: keep
 
-log:
-  level: DEBUG
-  filePath: /logs/traefik.log
+# log:
+#   level: DEBUG
+#   filePath: /logs/traefik.log
 
 providers:
   file:
