--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
   "github-actions.workflows.pinned.refresh.enabled": true,
   "github-actions.remote-name": "origin",
-  "github-actions.workflows.pinned.workflows": []
+  "github-actions.workflows.pinned.workflows": [],
+  "CodeGPT.organizationId": "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",
+  "CodeGPT.query.language": "Chinese"
 }
