--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.4.1",
+    "@docusaurus/core": "2.4.1",
     "@docusaurus/plugin-ideal-image": "^2.4.1",
     "@docusaurus/preset-classic": "^2.4.1",
     "@docusaurus/remark-plugin-npm2yarn": "^2.4.1",
@@ -60,6 +60,6 @@
   },
   "engines": {
     "node": ">=16.14",
-    "yarn": "1.22.19"
+    "yarn": ">=1.22.19"
   }
 }
